--- a/src/app/dashboard/tiposOT/crear/crear-tipo.component.scss
+++ b/src/app/dashboard/tiposOT/crear/crear-tipo.component.scss
@@ -100,6 +100,11 @@ mat-card-title{
 input{
   font-family: Arial; font-size: 12pt;
   }
+
+  input[type=checkbox] {
+    transform: scale(1.5);
+}
+
 mat-select{
   font-family: Arial; font-size: 10pt;
 }
