--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -32,5 +32,8 @@
   <a mat-list-item routerLinkActive="Complejidad" routerLink="Complejidad">
     <mat-icon>settings_applications</mat-icon> COMPLEJIDAD
   </a>
+  <a mat-list-item routerLinkActive="CrearAplicaciones" routerLink="CrearAplicaciones">
+    <mat-icon>settings_applications</mat-icon> APLICACIONES
+  </a>
 
 </mat-nav-list>
