--- a/src/app/dashboard/style/styleCrear.scss
+++ b/src/app/dashboard/style/styleCrear.scss
@@ -124,17 +124,13 @@ mat-select{
   width: 100%;
 }
 
-.mat-row .mat-cell {
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
-  cursor: pointer;
+.demo-button-container {
+  padding-bottom: 16px;
 }
 
-.mat-row:hover .mat-cell {
-  border-color: currentColor;
+.demo-button + .demo-button {
+  margin-left: 8px;
 }
-
-.demo-row-is-clicked {
-  font-weight: bold;
+.add-button{
+  float: right;
 }
-
