--- a/src/app/websites/login/login.component.html
+++ b/src/app/websites/login/login.component.html
@@ -21,8 +21,11 @@
           <div class="card-btns-flex mb-2">
            
             <button class="btn-text" (click)="openDialog()">Me olvidé mi contraseña</button>
-            <button mat-raised-button class="btn btn-dark-moon" type="submit"  (click) = "onLogin()">Ingresar</button>
-
+            
+            <div class="show-mat-spinner">
+              <button mat-raised-button *ngIf="!showSpinner" class="btn btn-dark-moon" type="submit"  (click) = "onLogin()">Ingresar</button>
+              <mat-spinner  *ngIf="showSpinner" [diameter]="30"></mat-spinner>
+            </div>
           </div>
 
         </div>
