--- a/src/app/websites/login/restore-password/restore-password.component.html
+++ b/src/app/websites/login/restore-password/restore-password.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Recuperar Contraseña</h1>
 <form>
-  <div mat-dialog-content>
+  <div mat-dialog-content class="col-xl-12">
     <p>Por favor, ingrese su número de documento y revise si el correo que aparece es el suyo. A ese destino se le enviará su nueva contraseña.</p>
     <div class="dialog-form-flex">
       <mat-form-field appearance="outline">
