--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 .mat-form-field-flex {
-    background-color: #ffffff !important;
+    background-color: transparent !important;
 }
   * {
     box-sizing: border-box;
