--- a/src/app/websites/login/restore-password/restore-password.component.scss
+++ b/src/app/websites/login/restore-password/restore-password.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: 35vh;
+    width: 98%;
     align-content: flex-start;
 }
 
