Maestro detalle editar Aplicacion y sub aplicacion
Maestro detalle aplicacion editar.

--- a/src/app/dashboard/Aplicacion/list/list.component.html
+++ b/src/app/dashboard/Aplicacion/list/list.component.html
@@ -54,7 +54,7 @@
               <button class="borrar" mat-icon-button  (click)="clear()" matTooltip="LIMPIAR"><mat-icon>delete_sweep</mat-icon></button>
                 </div>
                    <div class="derecha">
-                    <button class="create-ot-button" routerLinkActive="list-item-active" routerLink="../CrearAplicacion">
+                    <button class="create-ot-button" routerLinkActive="list-item-active" routerLink="../CrearAplicaciones">
                       <div class="button-icon-container">
                           <mat-icon class="button-icon">group_add</mat-icon>
                       </div>
@@ -86,12 +86,33 @@
                 <td mat-cell *matCellDef="let element"> {{element.dptoTecnico.nombre}} </td>
               </ng-container>
 
+              <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado</th>
+                <td mat-cell *matCellDef="let element">
+                  
+                    <mat-select [(ngModel)]="element.estado" class="readonly-block">
+
+                      <mat-option *ngFor="let estado of estados" [value]="estado.value" >
+                        {{estado.viewValue}}
+                      </mat-option>
+                    </mat-select>
+                 
+                </td>
+              </ng-container>
+
               <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Editar</th>
                 <td mat-cell *matCellDef="let element">
-                  <a (click) = "update(element)"  color="primary" matTooltip="EDITAR">
+                    <!-- <a (click) = "update()"  color="primary" matTooltip="EDITAR">
                     <mat-icon color="warn">border_color</mat-icon>
-                  </a>
+                  </a>  -->
+                    <a  [routerLink]="['../EditAplicaciones',element.idAplica]" matTooltip="EDITAR">
+                      <mat-icon color="warn">border_color</mat-icon>
+                    </a>
+                  <!--   <a  [routerLink]="['./../EditAplicaciones', element.idAplica]" color="primary">
+                      <mat-icon color="warn">border_color</mat-icon>
+                    </a> -->
+
                 </td>
               </ng-container>
 
