--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -15,10 +15,12 @@
   }
   mat-drawer-container {
     height: 100%;
+    margin-bottom: 35px; 
   }
 
   mat-drawer {
-    background-image: radial-gradient(circle at 95.14% 90.29%, #ffffff 0, #8092fd 15%, #3c78f2 50%, #0060e7 75%, #004cdc 100%);
+    background-color: #00204A;
+  //  background-image: radial-gradient(circle at 95.14% 90.29%, #ffffff 0, #8092fd 15%, #3c78f2 50%, #0060e7 75%, #004cdc 100%);
   }
 
   .title {
