--- a/src/app/dashboard/persona/modifyperson/modifyperson.component.html
+++ b/src/app/dashboard/persona/modifyperson/modifyperson.component.html
@@ -11,7 +11,7 @@
         <mat-form-field  [style.width.px]=200 class="example-full-width" color="accent" appearance="outline">
           <mat-label class="label">ID Persona</mat-label>
 
-            <input matInput placeholder = "ID Persona" formControlName="idPersona" readonly onmousedown="return false;">
+            <input matInput placeholder = "ID Persona" formControlName="idPersona" readonly >
         </mat-form-field>
 
         <mat-form-field fxFlex appearance="outline">
