--- a/src/app/dashboard/Aplicacion/update/update.component.html
+++ b/src/app/dashboard/Aplicacion/update/update.component.html
@@ -9,7 +9,7 @@
       <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
         <mat-form-field >
           <mat-label class="label">Aplicacion ID</mat-label>
-            <input matInput formControlName="idAplica" readonly onmousedown="return false;">
+            <input matInput formControlName="idAplica" readonly >
         </mat-form-field>
       </div>
       <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
@@ -45,12 +45,54 @@
 
           <mat-option *ngFor="let estado of estados" [value]="estado.value">
             {{estado.viewValue}}
+
           </mat-option>
         </mat-select>
       </mat-form-field>
    </div>
+
+
+
     </mat-dialog-content>
+  <mat-dialog-content>
+
+    <table class="table">
+     
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Estado </th>
+
+          <th scope="col">Accion</th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let employee of employeesList; index as i;">
+          <tr>
+
+            <ng-container *ngIf="enableEditIndex != i">
+              <td>{{employee.nombre}}</td>
+              <td>{{employee.estado}}</td>
+
+              <td *ngIf="enableEditIndex != i">
+                <button type="button" (click)="switchEditMode(i)">Edit</button>
+              </td>
+            </ng-container>
+            <ng-container *ngIf="enableEditIndex == i">
+              <td><input [(ngModel)]="employee.nombre" /></td>
+              <td><input [(ngModel)]="employee.estado" /></td>
+
+              <td><button (click)="save()">Update</button></td>
+            </ng-container>
+          </tr>
+        </ng-container>
+
+      </tbody>
+    </table>
+  </mat-dialog-content>
   </div>
+
+
   <mat-dialog-actions>
 
     <!--    <button mat-raiset-button color="primary" (click) = "cerrar()">CERRAR</button> -->
