--- a/src/app/dashboard/style/styleCrear.scss
+++ b/src/app/dashboard/style/styleCrear.scss
@@ -18,7 +18,8 @@ a.mat-stroked-button .mat-icon {
 }
 .example-spacer {
  flex: 1 1 auto;
-background-image: radial-gradient(circle at 95.14% 70.29%, #ffffff 0, #8092fd 15%, #3c78f2 50%, #0060e7 75%, #004cdc 100%);
+ background-color: #00BBF0;
+//background-image: radial-gradient(circle at 95.14% 70.29%, #ffffff 0, #8092fd 15%, #3c78f2 50%, #0060e7 75%, #004cdc 100%);
 color: #ffffff;
 height: 20px;
 
@@ -40,7 +41,7 @@ mat-card{
 
   margin-left:auto;
   margin-right:auto;
-  margin-top: 50px; /* height of header */
+  margin-top: 10px; /* height of header */
   padding: 10px;
 
 
@@ -50,9 +51,20 @@ mat-card{
   margin-top: 0.1px; /* height of header */
 
 }
+
+.input-row-td{
+  font-size: 5px;
+  margin-top: - 10px;
+}
 mat-card-title{
   font-family: "Homer Simpson UI";
 }
+
+.tbody-td{
+  
+  height: 1px;
+}
+
 
 .content{
 
@@ -118,10 +130,12 @@ mat-select{
 }
 
 /***********************************/
-
-
+.save{
+  color: #36e00b;
+}
 .demo-table {
   width: 100%;
+  
 }
 
 .demo-button-container {
@@ -133,4 +147,14 @@ mat-select{
 }
 .add-button{
   float: right;
+}
+
+
+.flexSpaceBetween {
+  justify-content: space-between;
+  background-color: #D5EEF7;
+}
+
+.done{
+  color: rgb(73, 214, 73);
 }
