agregando style en listar
diseño del listar

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,14 +18,14 @@
   </div>   -->
 
 
- <!--    <div class="main">
-
-  </div> -->
-
-  <router-outlet>
+    <div class="main">
+<router-outlet>
   </router-outlet>
+  </div> 
 
+  
 
+  
  
 
 </mat-drawer-container>
