--- a/src/app/dashboard/Aplicacion/list/list.component.html
+++ b/src/app/dashboard/Aplicacion/list/list.component.html
@@ -1,129 +1,114 @@
 
 
-<!--  <div class="main">
-
-
-        <mat-label class="example-spacer" center>
-      <p>&hearts;&hearts;&hearts;QUE TU SIEMPRE SERAS EL AMOR DE MI VIDA EN ESTA VIDA, </p>
-      <p>Y QUE EN MI OTRA VIDA IGUAL TE VOLVERIA A ELEJIR &hearts;&hearts;&hearts; </p>
-        </mat-label>
-
-
-        <video width="420" height="350" controls>
-          <source src="../../../../assets/img/iingenieria_144p.mp4" type="video/mp4">
-
-        </video>
-    </div> -->
-
-
-
     <div class="main">
-        <div class="toolbar">
-          <p>
-            <mat-toolbar class="example-spacer">
-              <span>APLICACIÓN</span>
-            </mat-toolbar>
-          </p>
-          </div>
-          <div class="container">
-            <div class="busqueda" [formGroup]="formControl">
-              <div class="izquierda">
-
-              <mat-form-field>
-                <mat-label>BUSCAR APLICACION</mat-label>
-
-                <input type="text" matInput placeholder="Buscar Tipo" formControlName="nombre">
-                <a class="icon"  matSuffix>
-                  <mat-icon>search</mat-icon>
-                </a>
-              </mat-form-field>
-
-              &nbsp;
-              <mat-form-field style="width: 300px;">
-                <mat-label>UNIDAD TECNICA</mat-label>
-                <mat-select  formControlName="dptoTecnico_filter" >
-
-                  <mat-option *ngFor="let dpto of dptoTecnicos" [value]="dpto.idDptoTecnico">
-                    {{dpto.nombre}}
-                  </mat-option>
-
-                </mat-select><a class="icon"  matSuffix>
-                  <mat-icon>search</mat-icon>
-                </a>
-              </mat-form-field>
-              <button class="borrar" mat-icon-button  (click)="clear()" matTooltip="LIMPIAR"><mat-icon>delete_sweep</mat-icon></button>
-                </div>
-                   <div class="derecha">
-                    <button class="create-ot-button" routerLinkActive="list-item-active" routerLink="../CrearAplicaciones">
-                      <div class="button-icon-container">
-                          <mat-icon class="button-icon">group_add</mat-icon>
-                      </div>
-                        <p class="button-title">NUEVO</p>
-                    </button>
-                  </div>
-            </div>
-          <div class="tablero">
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-              <!--- Note that these columns can be defined in any order.
-                    The actual rendered columns are set as a property on the row definition" -->
-
-              <!-- Position Column -->
-              <ng-container matColumnDef="idAplica">
-                <th mat-header-cell *matHeaderCellDef> ID. </th>
-                <td mat-cell *matCellDef="let element"> {{element.idAplica}} </td>
-              </ng-container>
-
-              <!-- Name Column -->
-              <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-              </ng-container>
-
-              <!-- Weight Column -->
-              <ng-container matColumnDef="Unidad">
-                <th mat-header-cell *matHeaderCellDef> Unidad Tecnica </th>
-                <td mat-cell *matCellDef="let element"> {{element.dptoTecnico.nombre}} </td>
-              </ng-container>
-
-              <ng-container matColumnDef="estado">
-                <th mat-header-cell *matHeaderCellDef> Estado</th>
-                <td mat-cell *matCellDef="let element">
-                  
-                    <mat-select [(ngModel)]="element.estado" class="readonly-block">
-
-                      <mat-option *ngFor="let estado of estados" [value]="estado.value" >
-                        {{estado.viewValue}}
-                      </mat-option>
-                    </mat-select>
-                 
-                </td>
-              </ng-container>
-
-              <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>Editar</th>
-                <td mat-cell *matCellDef="let element">
-                    <!-- <a (click) = "update()"  color="primary" matTooltip="EDITAR">
-                    <mat-icon color="warn">border_color</mat-icon>
-                  </a>  -->
-                    <a  [routerLink]="['../EditAplicaciones',element.idAplica]" matTooltip="EDITAR">
-                      <mat-icon color="warn">border_color</mat-icon>
-                    </a>
-                  <!--   <a  [routerLink]="['./../EditAplicaciones', element.idAplica]" color="primary">
-                      <mat-icon color="warn">border_color</mat-icon>
-                    </a> -->
-
-                </td>
-              </ng-container>
-
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-              <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro </td>
-              </tr>
-            </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
-
-          </div>
+      <div class="toolbar">
+        <p>
+          <mat-toolbar class="example-spacer">
+            <span>APLICACIÓN</span>
+          </mat-toolbar>
+        </p>
         </div>
+        <div class="container">
+          <div class="busqueda" [formGroup]="formControl">
+            <div class="izquierda">
+
+            <mat-form-field>
+              <mat-label>BUSCAR APLICACION</mat-label>
+
+              <input type="text" matInput placeholder="Buscar Tipo" formControlName="nombre">
+              <a class="icon"  matSuffix>
+                <mat-icon>search</mat-icon>
+              </a>
+            </mat-form-field>
+
+            &nbsp;
+            <mat-form-field style="width: 300px;">
+              <mat-label>UNIDAD TECNICA</mat-label>
+              <mat-select  formControlName="dptoTecnico_filter" >
+
+                <mat-option *ngFor="let dpto of dptoTecnicos" [value]="dpto.idDptoTecnico">
+                  {{dpto.nombre}}
+                </mat-option>
+
+              </mat-select><a class="icon"  matSuffix>
+                
+              </a>
+            </mat-form-field>
+            <button class="borrar" mat-icon-button  (click)="clear()" matTooltip="LIMPIAR"><mat-icon>delete_sweep</mat-icon></button>
+              </div>
+                 <div class="derecha">
+                  <button class="create-ot-button" routerLinkActive="list-item-active" routerLink="../CrearAplicaciones">
+                    <div class="button-icon-container">
+                        <mat-icon class="button-icon">group_add</mat-icon>
+                    </div>
+                      <p class="button-title">NUEVO</p>
+                  </button>
+                </div>
+          </div>
+        <div class="tablero mat-elevation-z8" >
+          <table mat-table [dataSource]="dataSource"  matSort>
+
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="idAplica">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
+              <td mat-cell *matCellDef="let element"> {{element.idAplica}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+              <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="Unidad">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Unidad Tecnica </th>
+              <td mat-cell *matCellDef="let element"> {{element.dptoTecnico.nombre}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado</th>
+              <td mat-cell *matCellDef="let element">
+                
+                  <mat-select [(ngModel)]="element.estado" class="readonly-block">
+
+                    <mat-option *ngFor="let estado of estados" [value]="estado.value" >
+                      {{estado.viewValue}}
+                    </mat-option>
+                  </mat-select>
+               
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef>Editar</th>
+              <td mat-cell *matCellDef="let element">
+                  <!-- <a (click) = "update()"  color="primary" matTooltip="EDITAR">
+                  <mat-icon color="warn">border_color</mat-icon>
+                </a>  -->
+                  <a  [routerLink]="['../EditAplicaciones',element.idAplica]" matTooltip="EDITAR">
+                    <mat-icon color="warn">border_color</mat-icon>
+                  </a>
+                <!--   <a  [routerLink]="['./../EditAplicaciones', element.idAplica]" color="primary">
+                    <mat-icon color="warn">border_color</mat-icon>
+                  </a> -->
+
+              </td>
+            </ng-container>
+
+            
+
+            <mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></mat-header-row>
+            <mat-row *matRowDef="let element; columns: displayedColumns;"></mat-row>
+
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro </td>
+            </tr>
+          </table>
+          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
+
+        </div>
+      </div>
