--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -22,9 +22,9 @@
   <a mat-list-item routerLinkActive="Aplicacion" routerLink="Aplicacion">
     <mat-icon>settings_applications</mat-icon> APLICACION
   </a>
-  <a mat-list-item routerLinkActive="SubAplicacion" routerLink="SubAplicacion">
+  <!-- <a mat-list-item routerLinkActive="SubAplicacion" routerLink="SubAplicacion">
     <mat-icon>settings_applications</mat-icon> SUB-APLICACION
-  </a>
+  </a> -->
 
   <a mat-list-item routerLinkActive="Prioridad" routerLink="Prioridad">
     <mat-icon>settings_applications</mat-icon> PRIORIDAD
@@ -32,8 +32,8 @@
   <a mat-list-item routerLinkActive="Complejidad" routerLink="Complejidad">
     <mat-icon>settings_applications</mat-icon> COMPLEJIDAD
   </a>
-  <a mat-list-item routerLinkActive="CrearAplicaciones" routerLink="CrearAplicaciones">
+  <!-- <a mat-list-item routerLinkActive="CrearAplicaciones" routerLink="CrearAplicaciones">
     <mat-icon>settings_applications</mat-icon> APLICACIONES
-  </a>
+  </a> -->
 
 </mat-nav-list>
