--- a/src/app/dashboard/Aplicacion/list/list.component.html
+++ b/src/app/dashboard/Aplicacion/list/list.component.html
@@ -31,7 +31,7 @@
                 </mat-option>
 
               </mat-select><a class="icon"  matSuffix>
-                
+
               </a>
             </mat-form-field>
             <button class="borrar" mat-icon-button  (click)="clear()" matTooltip="LIMPIAR"><mat-icon>delete_sweep</mat-icon></button>
@@ -72,14 +72,14 @@
             <ng-container matColumnDef="estado">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado</th>
               <td mat-cell *matCellDef="let element">
-                
+
                   <mat-select [(ngModel)]="element.estado" class="readonly-block">
 
                     <mat-option *ngFor="let estado of estados" [value]="estado.value" >
                       {{estado.viewValue}}
                     </mat-option>
                   </mat-select>
-               
+
               </td>
             </ng-container>
 
@@ -99,16 +99,18 @@
               </td>
             </ng-container>
 
-            
 
-            <mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></mat-header-row>
-            <mat-row *matRowDef="let element; columns: displayedColumns;"></mat-row>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- <mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></mat-header-row>
+            <mat-row *matRowDef="let element; columns: displayedColumns;"></mat-row> -->
 
             <tr class="mat-row" *matNoDataRow>
               <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro </td>
             </tr>
           </table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[10, 20, 30, 100]" [length]="100" [pageSize]="10"></mat-paginator>
 
         </div>
       </div>
