--- a/src/app/dashboard/subTipoOT/listar/sub-tipo.component.html
+++ b/src/app/dashboard/subTipoOT/listar/sub-tipo.component.html
@@ -46,8 +46,8 @@
                   </div>
                 
           </div>
-        <div class="tablero">
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <div class="tablero mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource">
 
               <ng-container matColumnDef="idSTipoOT">
                 <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -84,7 +84,7 @@
                 </ng-container>
 
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 
@@ -92,7 +92,7 @@
                 <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro ""</td><!-- {{input.value}} -->
               </tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
+            <mat-paginator [pageSizeOptions]="[10, 20, 30, 100]" [length]="100" [pageSize]="10"></mat-paginator>
          </div>
       </div>
     </div>
