--- a/src/app/dashboard/tiposOT/listar/tipo-ot.component.html
+++ b/src/app/dashboard/tiposOT/listar/tipo-ot.component.html
@@ -76,8 +76,8 @@
 
     </form> -->
 
-    <div class="tablero">
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <div class="tablero mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" >
 
                       <ng-container matColumnDef="idTipoOT">
                         <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -115,7 +115,7 @@
                         </ng-container>
 
 
-                      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></tr>
                       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 
