--- a/src/app/dashboard/unidadtecnica/listar/unidatecnica.component.html
+++ b/src/app/dashboard/unidadtecnica/listar/unidatecnica.component.html
@@ -45,8 +45,8 @@
               
         </div>
 
-<div class="tablero">
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="tablero mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" >
 
   <ng-container matColumnDef="idDptoTecnico">
     <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -83,7 +83,7 @@
     </ng-container>
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 
