--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -32,6 +32,9 @@
   <a mat-list-item routerLinkActive="Complejidad" routerLink="Complejidad">
     <mat-icon>settings_applications</mat-icon> COMPLEJIDAD
   </a>
+  <a mat-list-item routerLinkActive="Actividad" routerLink="Actividad">
+    <mat-icon>font_download</mat-icon> ACTIVIDAD
+  </a>
   <!-- <a mat-list-item routerLinkActive="CrearAplicaciones" routerLink="CrearAplicaciones">
     <mat-icon>settings_applications</mat-icon> APLICACIONES
   </a> -->
