--- a/src/app/dashboard/style/styles.scss
+++ b/src/app/dashboard/style/styles.scss
@@ -178,7 +178,7 @@ $bg-dark-btn-color: rgb(51, 112, 51);
 }
 
 .mat-row:nth-child(even){
-  background-color: #EFFBFF;
+  background-color: #FCFCFC;
 }
 
 .mat-row:nth-child(odd){
@@ -186,7 +186,7 @@ $bg-dark-btn-color: rgb(51, 112, 51);
 }
 
 .encabezado{
-    background-color: #BAE8E8;
+    background-color: #F3F3F3;
 }
 
 
