--- a/src/app/dashboard/Complejidad/list/list.component.html
+++ b/src/app/dashboard/Complejidad/list/list.component.html
@@ -9,25 +9,25 @@
     <div class="container">
       <div class="busqueda" [formGroup]="formControl">
         <div class="izquierda">
-  
+
         <mat-form-field>
           <mat-label>BUSCAR COMPLEJIDAD</mat-label>
-  
+
           <input type="text" matInput placeholder="Buscar Tipo" formControlName="nombre">
           <a class="icon"  matSuffix>
             <mat-icon>search</mat-icon>
           </a>
         </mat-form-field>
-  
+
         &nbsp;
         <mat-form-field style="width: 300px;">
           <mat-label>UNIDAD TECNICA</mat-label>
           <mat-select  formControlName="dptoTecnico_filter" >
-  
+
             <mat-option *ngFor="let dpto of dptoTecnicos" [value]="dpto.idDptoTecnico">
               {{dpto.nombre}}
             </mat-option>
-  
+
           </mat-select><a class="icon"  matSuffix>
             <mat-icon>search</mat-icon>
           </a>
@@ -44,29 +44,43 @@
             </div>
       </div>
     <div class="tablero mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" >
+      <table mat-table [dataSource]="dataSource" matSort>
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
-      
+
         <!-- Position Column -->
-        <ng-container matColumnDef="idComplejidad">
-          <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <ng-container matColumnDef="idComplejidad" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
           <td mat-cell *matCellDef="let element"> {{element.idComplejidad}} </td>
         </ng-container>
-      
+
         <!-- Name Column -->
-        <ng-container matColumnDef="nombre">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <ng-container matColumnDef="nombre" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
           <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
         </ng-container>
-      
+
         <!-- Weight Column -->
-        <ng-container matColumnDef="Unidad">
-          <th mat-header-cell *matHeaderCellDef> Unidad Tecnica </th>
+        <ng-container matColumnDef="Unidad" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Unidad Tecnica </th>
           <td mat-cell *matCellDef="let element"> {{element.dptoTecnico.nombre}} </td>
         </ng-container>
-      
+
+        <ng-container matColumnDef="estado" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado</th>
+          <td mat-cell *matCellDef="let element">
+
+              <mat-select [(ngModel)]="element.estado" class="readonly-block">
+
+                <mat-option *ngFor="let estado of estados" [value]="estado.value" >
+                  {{estado.viewValue}}
+                </mat-option>
+              </mat-select>
+
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef>Editar</th>
           <td mat-cell *matCellDef="let element">
@@ -75,7 +89,7 @@
             </a>
           </td>
         </ng-container>
-      
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
@@ -84,6 +98,6 @@
         </tr>
       </table>
       <mat-paginator [pageSizeOptions]="[10, 20, 30, 100]" [length]="100" [pageSize]="10"></mat-paginator>
-      
+
     </div>
   </div>
