--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+position: relative;
+}
 
 
 .mat-form-field-flex {
@@ -9,6 +11,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
   * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
   .icom{
     color:blue;
