revisando cada interface web
revisando cada interface web

--- a/src/app/dashboard/Actividad/create/create.component.html
+++ b/src/app/dashboard/Actividad/create/create.component.html
@@ -49,8 +49,12 @@
                           </div>
 
                           <div class="boton">
-                            <button class="btn1"  type="cancel"  mat-raised-button color="warn" (click)="cancelar()">
-                              <mat-icon>cancel</mat-icon>Cancelar</button>
+                            <!-- <button class="btn1"  type="cancel"  mat-raised-button color="warn" (click)="cancelar()">
+                              <mat-icon>cancel</mat-icon>Cancelar</button> -->
+                              <button class="btn1"  type="cancel"  mat-raised-button color="warn" (click)="cancelar()">
+                                <mat-icon>reply_all</mat-icon>REGRESAR</button>
+                            
+
                             <button class="btn2" id="btnSubmit" type="submit"  mat-raised-button  [disabled]="FormActividad.invalid">
                             <mat-icon>save</mat-icon>AGREGAR</button>
 
