--- a/src/app/dashboard/Actividad/update/update.component.html
+++ b/src/app/dashboard/Actividad/update/update.component.html
@@ -1,5 +1,5 @@
 
-<div class="title">
+  <div class="title">
     <h4 class="text">MODIFICAR ACTIVIDAD</h4>
   </div>
 
@@ -51,7 +51,8 @@
         </button>
 
         <button  class="btn2"  mat-flat-button  (click) = "guardar()">
-        <mat-icon>save</mat-icon>Modificar</button>
+          <mat-icon>save</mat-icon>Modificar
+        </button>
       </div>
     </mat-dialog-actions>
   </div>
