--- a/src/app/dashboard/Aplicaciones/create/create.component.html
+++ b/src/app/dashboard/Aplicaciones/create/create.component.html
@@ -81,13 +81,13 @@
                               <th>Estado<span class="ui-column-resizer" dragableColumn> </span></th>
                               <th></th>
                             </thead>
-                            <tbody>
+                            <tbody>  
                               <ng-container formArrayName="tableRows" *ngFor="let group of getFormControls.controls ; let i=index">
                                 <tr *ngIf="group.get('isEditable')?.value" [formGroupName]="i">
                                   <td>
                                     <mat-form-field >
-                                      <mat-label class="label">Nombre Completo</mat-label>
-                                      <input matInput placeholder="Nombre" formControlName="Nombre" autocomplete="off" required>
+                                      
+                                      <input matInput formControlName="Nombre" autocomplete="off" required>
                                     </mat-form-field >
                                   </td>
                                  <!--  <td>
@@ -116,7 +116,7 @@
                                   </td> -->
                                   <td>
                                     <mat-form-field  >
-                                      <mat-label class="label">Estado</mat-label>
+                                      
                                       <mat-select formControlName="estado" [(value)]="selectedFood">
 
                                         <mat-option *ngFor="let estado of estados" [value]="estado.value">
@@ -168,8 +168,11 @@
                         </form>
 
                         <div class="boton">
-                          <button class="btn1"  type="cancel"  mat-raised-button color="warn" (click)="cancelar()"><!-- (click)="enableDisableRule()"    [ngClass]="{'primary' : toggle, 'red': !toggle}" -->
-                            <mat-icon>cancel</mat-icon>Cancelar</button>
+                          <!-- <button class="btn1"  type="cancel"  mat-raised-button color="warn" (click)="cancelar()">
+                            <mat-icon>cancel</mat-icon>Cancelar</button> -->
+                            <button class="btn1"  type="cancel"  mat-raised-button color="warn" (click)="cancelar()">
+                              <mat-icon>reply_all</mat-icon>REGRESAR</button>
+                         
                           <!-- <button class="btn2" id="contactForm" type="submit"  mat-raised-button  [disabled]="FormAplicacion.invalid"><
                           <mat-icon>save</mat-icon>AGREGAR</button> -->
 
